--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "electron-serve": "^1.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "14.1.0",
@@ -26,6 +27,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
+    "electron": "^29.0.1",
+    "electron-builder": "24.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
