--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "start": "next start",
     "desktop:dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
     "desktop:build": "next build && electron-builder",
+    "eslint:format": "eslint src --fix",
+    "prettier:format": "prettier --write .",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,json}\"",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
     "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
     "lint": "next lint",
     "test": "jest --coverage",
+    "test:ci": "jest --ci",
     "test:watch": "jest --watchAll",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "clsx": "^2.1.0",
     "electron-serve": "^1.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
@@ -38,11 +45,22 @@
     "electron-builder": "24.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "lint-staged": "15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn prettier:format",
+      "yarn eslint:format"
+    ],
+    "*.js": "eslint --cache --fix"
   },
   "packageManager": "yarn@4.1.0"
 }
