--- a/.github/workflows/node-ci-runner.js.yml
+++ b/.github/workflows/node-ci-runner.js.yml
@@ -5,9 +5,9 @@ name: node-ci-runner
 
 on:
   push:
-    branches: ["master"]
+    branches: ['master']
   pull_request:
-    branches: ["master"]
+    branches: ['master']
 
 jobs:
   build:
