--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "desktop:dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
     "desktop:build": "next build && electron-builder",
     "eslint:format": "eslint src --fix",
-    "prettier:format": "prettier --write .",
-    "prettier:check": "prettier --check \"**/*.{ts,tsx,json}\"",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
-    "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
+    "prettier:format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml,json}\"",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml,json}\"",
     "lint": "next lint",
     "test": "jest --coverage",
     "test:ci": "jest --ci",
