--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,9 +42,10 @@
     "concurrently": "^8.2.2",
     "electron": "^29.0.1",
     "electron-builder": "24.12.0",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "15.2.2",
