--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clsx", "godjira", "tailwindcss", "testid"]
+  "cSpell.words": ["clsx", "godjira", "tailwindcss", "testid", "trivago"]
 }
