--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -52,6 +53,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
