perf: :card_file_box: perform database migration and create sql table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["clsx", "godjira", "tailwindcss", "testid", "trivago"]
+  "cSpell.words": [
+    "clsx",
+    "fkey",
+    "godjira",
+    "KANBAN",
+    "pkey",
+    "tailwindcss",
+    "testid",
+    "trivago"
+  ]
 }
