feat: :seedling: add seed data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,3 @@
 {
-  "cSpell.words": [
-    "clsx",
-    "fkey",
-    "godjira",
-    "KANBAN",
-    "pkey",
-    "tailwindcss",
-    "testid",
-    "trivago"
-  ]
+  "cSpell.words": ["clsx", "fkey", "godjira", "KANBAN", "pkey", "tailwindcss", "testid", "trivago"]
 }
