--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "prepare": "husky",
     "postinstall": "husky install"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@testing-library/jest-dom": "^6.4.2",
@@ -55,6 +58,7 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "lint-staged": {
