--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:ci": "jest --ci",
     "test:watch": "jest --watchAll",
     "prepare": "husky",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "prisma:migrate-dev": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:tidy": "prisma format",
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
