perf: :bangbang: add million js beta version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["clsx", "fkey", "godjira", "KANBAN", "pkey", "tailwindcss", "testid", "trivago"]
+  "cSpell.words": [
+    "biomejs",
+    "clsx",
+    "fkey",
+    "godjira",
+    "KANBAN",
+    "pkey",
+    "tailwindcss",
+    "testid",
+    "trivago"
+  ]
 }
