--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron-serve": "^1.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "million": "^2.6.0-beta.11",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
