docs: :low_brightness: update env example for more clarity

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,48 @@
-DATABASE_PROVIDER="postgresql"
+#===========================================
+# 🔴 REQUIRED
+#===========================================
+
+# postgres://username:password@hostname/database
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+
+#===========================================
+# 🟢 OPTIONAL (EASY)
+#===========================================
+
+# Specify your website domain in production
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+
+#===========================================
+# 🟡 OPTIONAL (MEDIUM)
+#===========================================
+
+
+
+#===========================================
+# 🟠 OPTIONAL (ADVANCED)
+#===========================================
+
+# Specify if you have "authjs" as auth provider
+
+
+
+#===========================================
+# 🔵 OPTIONAL (ADDITIONAL)
+#===========================================
+
+# Specify if you want to enable ip rate limit
+
+
+#===========================================
+# 🟣 INSTRUCTIONS
+#===========================================
+
+# [IMPORTANT THINGS TO KNOW]
+# Never share or commit the ".env" file anywhere.
+
+
+#===========================================
+# ⭕ CURRENTLY NOT USED
+#===========================================
