--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "electron-serve": "^1.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lucide-react": "^0.344.0",
     "million": "^2.6.0-beta.11",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
     "tailwind-variants": "^0.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
