--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "lucide-react": "^0.344.0",
     "million": "^2.6.0-beta.11",
     "next": "14.1.0",
+    "next-theme": "^0.1.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
