--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "docker:build": "docker compose build || docker build -t godjira",
+    "docker:start": "docker compose up || docker run -d -p 3000:3000 godjira",
+    "docker:stop": "docker kill godjira"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
