--- a/package.json
+++ b/package.json
@@ -56,10 +56,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.2",
-    "docker:customBuild": "docker compose build || docker build -t godjira",
-    "docker:customStart": "docker compose up || docker run -d -p 3000:3000 godjira",
-    "docker:customStop": "docker kill godjira"    
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
