--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.344.0",
     "million": "^2.6.0-beta.11",
-    "next": "14.1.0",
+    "next": "canary",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
