--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./desktop-electron-app/main.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "kill": "pkill -f node",
     "desktop:dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
