--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -87,7 +88,7 @@
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",    "typesync": "^0.12.1"
   },
   "lint-staged": {
     "src/**/*": [
