--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "kill": "pkill -f node",
+    "types:auto-add": "npx typesync",
+    "types:auto-check": "npm run types:auto-add -- --dry",
     "desktop:dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
     "desktop:build": "next build && electron-builder",
     "eslint:format": "eslint src --fix",
