--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-
+    "@types/autoprefixer": "~10.2.0",
+    "@types/eslint": "~8.56.5",
+    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/lint-staged": "~13.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -90,7 +93,8 @@
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5",    "typesync": "^0.12.1"
+    "typescript": "^5",
+    "typesync": "^0.12.1"
   },
   "lint-staged": {
     "src/**/*": [
