--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "kill": "pkill -f node",
-    "types:auto-add": "npx typesync",
+    "types:auto-add": "typesync || :",
     "types:auto-check": "npm run types:auto-add -- --dry",
     "desktop:dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
     "desktop:build": "next build && electron-builder",
