--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.344.0",
     "million": "^2.6.0-beta.11",
     "next": "canary",
+    "next-auth": "^4.24.7",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
